src/test/ui/raw-ref-op/raw-ref-op.stderr
error: raw borrows are not yet implemented
  --> $DIR/raw-ref-op.rs:7:15
   |
LL |     let c_p = &raw const x;
   |               ^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-op.rs:8:15
   |
LL |     let m_p = &raw mut x;
   |               ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: aborting due to 2 previous errors

